tests/snapshots/integration__integration_tests__user_hooks__user_post_create_executes.snap
---
source: tests/integration_tests/user_hooks.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mRunning user post-create [1mlog[22m:[39m
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'USER_POST_CREATE_RAN'[0m[2m [0m[2m[36m>[0m[2m user_hook_marker.txt
[0m✅ [32m[32mCreated new worktree for [1mfeature[22m from [1mmain[22m @ [1m[REPO].feature[39m[22m[39m
💡 [2mRun [90mwt config shell install[39m to enable automatic cd[22m
